--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico" />
 	
 	<!-- Required meta tags -->
     <meta charset="utf-8">
