--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -1,20 +1,12 @@
 {% extends 'base.html' %}
 {% block head %}
-
-  <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-
 {% endblock %}
 
 {% block content %}
 
 <nav class="navbar navbar-expand-lg" id="navbar_color"> 
     <a class="navbar-brand" href="#">
-    <img src="/static/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
+    <img src="/static/images/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
   </button>
   <form class="form-inline">
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
