--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
 <!--navbar -->
 <nav class="navbar navbar-expand-lg" id="navbar_color"> 
     <a class="navbar-brand" href="#">
-    <img src="/static/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
+    <img src="/static/images/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
   </button>
   <form class="form-inline">
   <div class="" id="navbarNavDropdown">
@@ -27,6 +27,12 @@
 
 </form>
 </nav>
+
+<!-- CSS for this page -->
+<link rel="stylesheet" href="/static/css/profile.css">
+
+<!-- w3.css for save button -->
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <!--DataTables.net downloaded locally -->
 <link rel="stylesheet" type="text/css" href="/static/css/jquery.dataTables.min.css">
@@ -59,9 +65,11 @@
                 <td>{{ item.call_duration }}</td>
                 <td><audio controls><source src="{{ item.recording_url }}"/></audio></td>
                 <td> <div>
+                    <div class="w3-container">
                     <form action="/profile_changed" accept-charset="UTF-8" method="post">
                     <input type="hidden" name="call_sid" id="call_sid_id" value="{{ item.call_sid }}">
-                    <input type="text" name="comment" pattern="[A-Za-z0-9!@&%,]+" title="Only letters, numbers, !@&%" id="comment_id" maxlength="50" value="{{ item.user_comments }}"><input type="submit" value="Save" class="btn-xs">
+                    <input type="text" name="comment" title="Only letters, numbers" id="comment_id" maxlength="50" style="color: #000000; background-color: #FFFFFF;" value="{{ item.user_comments }}"><button class="w3-button w3-border w3-tiny" class="btn">Save</button></div>
+                    <!-- <input type="submit" value="Save" class="btn-xs"> -->
                 </form>
                     </div></td>
                 <td><div>
