--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
+<div class="bg">
 {% endblock %}
 
 {% block content %}
@@ -45,7 +46,7 @@
     <div class="row">
         <div class="col-sm"></div>
         <div class="col-8">
-    <h3>Call Log</h3>
+    <h3 class="title_head">Call Log</h3>
     <table id="calllog_table" class="table-sm table-hover table-dark table-bordered">
         <thead>
             <tr>
