--- a/templates/progresscall.html
+++ b/templates/progresscall.html
@@ -3,7 +3,7 @@
 
 <!-- CSS for timer -->
 <link rel="stylesheet" href="/static/css/timer.css">
-
+<div class="bg">
 {% endblock %}
 
 {% block content %}
