--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -4,19 +4,19 @@
 	color: #FFFFFF;
 }
 
-/*body {
+body {
   margin: 0;
-  padding: 0;*/
+  padding: 0;
 /*  Background fallback in case of IE8 & down, or in case video doens't load, such as with slower connections  */
-/*  background: #333;
+  background: #333;
   background-attachment: fixed;
   background-size: cover;
-}*/
+}
 
 /* The only rule that matters */
-/*#video-background {*/
+#video-background {
 /*  making the video fullscreen  */
- /* position: fixed;
+  position: fixed;
   right: 0; 
   bottom: 0;
   min-width: 100%; 
@@ -25,4 +25,3 @@
   height: auto;
   z-index: -100;
 }
-*/
