--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,15 +1,28 @@
 {% extends 'base.html' %}
 {% block head %}
+<div class="bg_hp">
 {% endblock %}
 {% block content %}
 
-<nav class="navbar navbar-expand-lg" id="navbar_color">
+<nav class="navbar navbar-expand-lg" id="navbar_color_hp">
   <a class="navbar-brand" href="#">
   	<img src="/static/images/LogoMakr_1eVpm6.png" width="200" height="200" class="d-inline-block align-top" alt=""></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
  </nav>
+
+
+<!-- <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'> -->
+  
+<!--  Video is muted & autoplays, placed after major DOM elements for performance & has an image fallback  -->
+<!-- <video autoplay loop id="video-background" muted plays-inline>
+  <source src="/static/images/Abstract Lights in Tunnel.mp4" type="video/mp4">
+</video> -->
+
+<div>
+	Getting Started
+</div>
 
 <div align="center">
 <h3>Login to your account</h3>
@@ -26,7 +39,7 @@
 <form action="/register" method="POST" class="pure-form">
 <div>
 	<h4>Don't have an account? Sign Up</h4>
-	<input type="text" pattern="[A-Za-z0-9]+" title="Letters and Numbers only" placeholder="Username" name="new_username"  autocapitalize="off" required><br>
+	<input type="text" pattern="[A-Za-z0-9]+" title="Letters and Numbers only" placeholder="Username" name="new_username"  autocapitalize="off" pattern="{,15}" required><br>
 	<input type="email" placeholder="E-mail address" name="email" required><br>
 	<input type="password" placeholder="Enter password" name="pw1" id="password" pattern=".{5,}" title="Five or more characters" required><br>
 	<input type="password" placeholder="Confirm password" name="pw2" id="confirm_password" required><br>
