--- a/templates/phone_verification.html
+++ b/templates/phone_verification.html
@@ -6,7 +6,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/authy-form-helpers/2.3/form.authy.min.js" data-turbolinks-track="reload"></script>
 <link href="https://www.authy.com/form.authy.min.css" media="screen" rel="stylesheet" type="text/css">
 <script src="https://www.authy.com/form.authy.min.js" type="text/javascript"></script>
-   
+
+<div class="bg">
  {% endblock %}
 
 
