--- a/templates/techstack.html
+++ b/templates/techstack.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block head %}
-<div class="bg">
 	
 {% endblock %}
+<div class="bg"></div>
 
 {% block content %}
 {% endblock %}
