--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,4 +1,7 @@
+
 /* CSS for account details in profile.html */
+
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -10,8 +13,8 @@
     width: 50%; /* Full width */
     height: 50%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    /*background-color: rgb(0,0,0);*/ /* Fallback color */
-    /*background-color: rgba(0,0,0,0.4);*/ /* Black w/ opacity */
+    /*background-color: rgb(0,0,0); /* Fallback color */*/
+    /*background-color: rgba(0,0,0,0.4); /* Black w/ opacity */*/
 }
 
 /* Modal Content */
@@ -20,8 +23,8 @@
     margin: auto;
     padding: 20;
     border: 1px solid #888;
-    width: 70%;
-    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);*/
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
