--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -1,19 +1,22 @@
 {% extends 'base.html' %}
 {% block head %}
-<div class="bg">
+
 {% endblock %}
 
 {% block content %}
 
+
+<div class="bg">
+<!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg" id="navbar_color"> 
     <a class="navbar-brand" href="#">
-    <img src="/static/images/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
-  </button>
+    <img src="/static/images/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt="">
+    </a>
   <form class="form-inline">
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <div class="" id="navbarNavDropdown">
     <ul class="navbar-nav">
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;"><i class="far fa-user"></i> {{ user_username }}</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white; font-size: 20px;"><i class="far fa-user"></i> {{ user_username }}</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="/profile/{{ user_username }}">Profile/Call log</a>
           <a class="dropdown-item" href="#">Make a call</a>
@@ -32,15 +35,11 @@
     <!-- #no need for user to input their num, we'll just grab it from the db. 
     Enter a phone number(add country code): 
     <input type="tel" name="phonenum" autocomplete="on" value="+13474568702"><br><br> -->
-    <a style="color: #FFFFFF;">Enter the phone number you want to record:
-    <input type="tel" name="phonenum2" autocomplete="on" required><br>
+    <a style="color: #FFFFFF;">Enter the phone number you want to record:</a>
+    <input type="tel" name="phonenum2" pattern="[0-9]{11}" autocomplete="on" required><br>
     <input type="submit" value="call">
   </form>
 </div>
 
-<!--JQuery, Popper.js, and Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
+</div>
 {% endblock %}
