--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,34 +1,6 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<div class="bg">
-{% endblock %}
-
-{% block content %}
-
-<!--navbar -->
-<nav class="navbar navbar-expand-lg" id="navbar_color"> 
-    <a class="navbar-brand" href="#">
-    <img src="/static/images/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
-  </button>
-  <form class="form-inline">
-  <div class="" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;"><i class="far fa-user"></i> {{ user_username }}</a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Call log</a>
-          <a class="dropdown-item" href="/call">Make a call</a>
-          <a class="dropdown-item" href="#" id="myBtn">Account Details</a>
-          <a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i> Logout</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-
-</form>
-</nav>
-
 <!-- CSS for this page -->
 <link rel="stylesheet" href="/static/css/profile.css">
 
@@ -37,80 +9,99 @@
 
 <!--DataTables.net downloaded locally -->
 <link rel="stylesheet" type="text/css" href="/static/css/jquery.dataTables.min.css">
-<script type="text/javascript" charset="utf8" src="/static/js/jquery.dataTables.min.js">
-</script>
+{% endblock %}
 
+{% block content %}
+
+<div class="bg">
+
+<!--navbar -->
+<nav class="navbar navbar-expand-lg" id="navbar_color"> 
+    <a class="navbar-brand" href="#">
+    <img src="/static/images/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
+  <form class="form-inline">
+  <div class="" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white; font-size: 20px;"><i class="far fa-user"></i> {{ user_username }}</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Call log</a>
+          <a class="dropdown-item" href="/call">Make a call</a>
+          <a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i> Logout</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  </form>
+</nav>
+
+ <!-- message flashes -->
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div style="color: white; font-size: 20px" align="center">
+    {% for message in messages %}
+        {{ message }}</div>
+    {% endfor %}
+{% endif %}
+{% endwith %}   
+
+<div align="center" class="title_head" style="font-size: 25px;">
+<p><b> USERNAME:</b> {{ user_username }}</p>
+<p><b>PRIMARY PHONE NUMBER:</b> {{ user_phone }}</p>
+<p><b>EMAIL ADDRESS:</b> {{ user_email }}</p>
+</div>
 
 <!--table with call data -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm"></div>
         <div class="col-8">
-    <h3 class="title_head">Call Log</h3>
-    <table id="calllog_table" class="table-sm table-hover table-dark table-bordered">
-        <thead>
-            <tr>
-                <th scope="col">Date created</th>
-                <th scope="col">Number called</th>
-                <th scope="col">Duration</th>
-                <th scope="col">Recording</th>
-                <th scope="col">Description</th>
-                <th scope="col">Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-                {% for item in user_calls %}
-            <tr>
-                <td>{{ item.call_datetime }}</td>
-                <td>{{ item.number_called }}</td>
-                <td>{{ item.call_duration }}</td>
-                <td><audio controls><source src="{{ item.recording_url }}"/></audio></td>
-                <td> <div>
-                    <div class="w3-container">
-                    <form action="/profile_changed" accept-charset="UTF-8" method="post">
-                    <input type="hidden" name="call_sid" id="call_sid_id" value="{{ item.call_sid }}">
-                    <input type="text" name="comment" title="Only letters, numbers" id="comment_id" maxlength="50" style="color: #000000; background-color: #FFFFFF;" value="{{ item.user_comments }}"><button class="w3-button w3-border w3-tiny" class="btn">Save</button></div>
-                    <!-- <input type="submit" value="Save" class="btn-xs"> -->
-                </form>
-                    </div></td>
-                <td><div>
-                    <form action="/delete" accept-charset="UTF-8" method="post">
-                    <input type="hidden" name="call_sid" id="call_sid_id" value="{{ item.call_sid }}">
-                    <input type="submit" value="x" id="delete-btn" class="btn btn-xs" name="delete" onclick="msg()">
-                    </form>
-                    </div>
-                </td>
-            </tr>
-                {% endfor %}
-        </tbody>
-    </table>
+        <h3 class="title_head">Call Log</h3>
+        <table id="calllog_table" class="table-sm table-hover table-light table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">Date created</th>
+                    <th scope="col">Number called</th>
+                    <th scope="col">Duration</th>
+                    <th scope="col">Recording</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                    {% for item in user_calls %}
+                <tr>
+                    <td>{{ item.call_datetime }}</td>
+                    <td>{{ item.number_called }}</td>
+                    <td>{{ item.call_duration }}</td>
+                    <td><audio controls><source src="{{ item.recording_url }}"/></audio></td>
+                    <td>
+                            <div class="w3-container">
+                            <form action="/profile_changed" accept-charset="UTF-8" method="post">
+                            <input type="hidden" name="call_sid" id="call_sid_id" value="{{ item.call_sid }}">
+                            <input type="text" name="comment" title="Only letters, numbers" id="comment_id" maxlength="50" style="color: #000000; background-color: #FFFFFF;" value="{{ item.user_comments }}"><button class="w3-button w3-border w3-tiny" class="btn">Save</button>
+                            </form> 
+                            </div>
+                    </td>
+                    <td>
+                        <div>
+                        <form action="/delete" accept-charset="UTF-8" method="post">
+                        <input type="hidden" name="call_sid" id="call_sid_id" value="{{ item.call_sid }}">
+                        <input type="submit" value="x" id="delete-btn" class="btn btn-xs" name="delete" onclick="msg()">
+                        </form>
+                        </div>
+                    </td>
+                </tr>
+                    {% endfor %}
+            </tbody>
+        </table>
         </div>
         <div class="col-sm"></div>
-        </div>
-    </div>
-
-</div>
-
-<!-- <div class="account_button">
-<button id="myBtn">Account Details</button> -->
-
-<!-- The modal -->
-<div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <p> Username: {{ user_username }}</p>
-        <p> Primary phone number: {{ user_phone }}</p>
-        <p> Email address: {{ user_email }}</p>
-        </div>
     </div>
 </div>
 
-<!--JQuery, Popper.js, and Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
+<script type="text/javascript" charset="utf8" src="/static/js/jquery.dataTables.min.js">
+</script>
 
 <!-- Javascript for this page -->
 <script src="/static/js/profile.js"></script>
