--- a/templates/progresscall.html
+++ b/templates/progresscall.html
@@ -17,7 +17,7 @@
   <div class="" id="navbarNavDropdown">
     <ul class="navbar-nav">
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;"><i class="far fa-user"></i> {{ user_username }}</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white; font-size: 20px;"><i class="far fa-user"></i> {{ user_username }}</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="/profile/{{ user_username }}"">Profile/Call log</a>
           <a class="dropdown-item" href="/call">Make a call</a>
@@ -29,29 +29,60 @@
 </form>
 </nav>
 
-<h1 id="progress">CALL IN PROGRESS</h1>
+<h1 class="title_head" id="progress">CALL IN PROGRESS</h1>
+
+<div id="inprogress"></div>
 
 <!--Stop timer js -->
 <!-- <div class="container"> -->
   <nav class="controls">
-      <a href="#" class="button" onClick="stopwatch.start();">Start</a>
-      <a href="#" class="button" onClick="stopwatch.lap();">Lap</a>
-      <a href="#" class="button" onClick="stopwatch.stop();">Stop</a>
-      <a href="#" class="button" onClick="stopwatch.restart();">Restart</a>
-      <a href="#" class="button" onClick="stopwatch.clear();">Clear Laps</a>
-    </nav>
+      <body onload="stopwatch.start();">
+  </nav>
+    
     <div class="stopwatch"></div>
     <ul class="results"></ul>
 <!-- </div>
  -->
 
-<!--JQuery, Popper.js, and Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
 <!-- Javascript for this page -->
 <script src="/static/js/timer.js"></script>
+ 
+
+<script type="text/javascript">
+    var g_call_sid = "";
+    function check_finished() {
+        var url2 = "/iscallactive?call_sid=" + g_call_sid;
+        console.log("checking url");
+        console.log(url2);
+        //AJAX
+        $.ajax({
+          url: url2, 
+          success: function(result){
+            //$("#inprogress").html(result);
+            if (result == "FALSE") {
+              stopwatch.stop();
+              $("#inprogress").html("Call is complete.");
+            }
+          }
+        });
+    }
+
+
+    //https://stackoverflow.com/questions/4842590/how-to-run-a-function-when-the-page-is-loaded
+     function codeAddress() {
+            var call_sid = "{{call_sid }}";
+            console.log("call_sid");
+            console.log(call_sid);
+            g_call_sid = call_sid;
+            //https://stackoverflow.com/questions/5638783/how-do-i-get-this-javascript-to-run-every-second
+            var t=setInterval(
+              function() { 
+                check_finished();
+              },1000);
+        }
+        //need to use document.ready not onload
+      $(document).ready(codeAddress);
+</script>
 
 
 {% endblock %}
