--- a/templates/verify.html
+++ b/templates/verify.html
@@ -2,22 +2,42 @@
 {% block head %}
 	
 {% endblock %}
-
+<div class="bg">
 {% block content %}
-	<h1>You're almost there!</h1>
 
-	<form action="/verify" accept-charset="UTF-8" method="post">
+<nav class="navbar navbar-expand-lg" id="navbar_color_hp">
+  <a class="navbar-brand" href="#">
+  	<img src="/static/images/LogoMakr_1eVpm6.png" width="200" height="200" class="d-inline-block align-top" alt=""></a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+ </nav>
+
+
+ <!-- message flashes -->
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+	<div style="color: white; font-size: 20px" align="center">
+	{% for message in messages %}
+    	{{ message }}</div>
+    {% endfor %}
+{% endif %}
+{% endwith %}	
+
+
+
+<div align="center">
+	<h1 class="title_head">You're almost there!</h1>
+		<form action="/verify" accept-charset="UTF-8" method="post">
+			
 		<div>
-			<label>Enter the code you were sent:</label>
+			<label class="title_head">Enter the code you were sent:</label>
 			<input name="token" id="token" required>
 		</div>
-		<button name="button" type="submit">Verify</button>
-	</form><br>
-	<form action="/logout"><button name="button" type="submit">Start over</button></form>
-
-<!--JQuery, Popper.js, and Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+			<button name="button" type="submit">Verify</button>
+		</form><br>
+		<form action="/logout"><button name="button" type="submit">Start over</button></form>
+</div>
+</div>
 
 {% endblock %}
