--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,11 +15,6 @@ body {
 	background-color: #000000;
 }
 
-#progress {
-    font-size: 65px;
-    text-align: center;
-}
-
 .title_head {
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 50px;
@@ -29,4 +24,71 @@ body {
 
 .error {
     color: red;
+}
+
+#redirect_page {
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 20px;
+    color: #FFFFFF;   
+    border-style: solid;
+    border-width: 2px; 
+    border-color: #B4A747;
+    /*box-sizing: center;*/
+    width: 50%;
+    height: 100%;
+    float: center;
+}
+
+input {
+  background: #000000;
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #DDDDDD;
+  color: white;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-weight: 100;
+  font-size: 20px;
+}
+
+input:focus {
+  box-shadow: 0 0 10px rgba(239, 48, 84, 84);
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid rgba(239, 48, 84, 84);
+}
+
+input [type=submit]:hover {
+  cursor: pointer;
+}
+
+button {
+  background: #000000;
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #DDDDDD;
+  color: white;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-weight: 100;
+  font-size: 20px;
+}
+
+button:focus {
+  box-shadow: 0 0 10px rgba(239, 48, 84, 84);
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid rgba(239, 48, 84, 84);
+}
+
+button[type=submit]:hover {
+  cursor: pointer;
 }
