--- a/templates/profile.html
+++ b/templates/profile.html
@@ -79,7 +79,7 @@
                             <div class="w3-container">
                             <form action="/profile_changed" accept-charset="UTF-8" method="post">
                             <input type="hidden" name="call_sid" id="call_sid_id" value="{{ item.call_sid }}">
-                            <input type="text" name="comment" title="Only letters, numbers" id="comment_id" maxlength="50" style="color: #000000; background-color: #FFFFFF;" value="{{ item.user_comments }}"><button class="w3-button w3-border w3-tiny" class="btn">Save</button>
+                            <input type="text" name="comment" title="Only letters, numbers" id="comment_id" maxlength="50" style="color: #FFFFFF; background-color: #252525;" value="{{ item.user_comments }}"><button class="w3-button w3-border w3-tiny" class="btn">Save</button>
                             </form> 
                             </div>
                     </td>
@@ -100,11 +100,35 @@
     </div>
 </div>
 
+
+<!--DataTables.net downloaded locally -->
+<link rel="stylesheet" type="text/css" href="/static/css/jquery.dataTables.min.css">
 <script type="text/javascript" charset="utf8" src="/static/js/jquery.dataTables.min.js">
 </script>
 
 <!-- Javascript for this page -->
-<script src="/static/js/profile.js"></script>
+<script type="text/javascript">
+/*let deleteBtn = doucment.querySelector('#delete-btn');*/
+function msg(evt) {
+    alert("Call Deleted");
+    evt,preventDefault();
+}
+    
+/*deleteBtn.addEventListener('submit', msg);*/
+//Tell browser what to call when the page is ready to be viewed
+$(document).ready( 
+    //Call this anonymous function
+    function () {
+        //Create a DataTable
+        var data_table = $('#calllog_table').DataTable(
+            {
+                "order": [[ 0, "asc" ]]
+            });
+        //var column = data_table.columns(0);
+        //column.visible(false);
+    } 
+);
+</script>
 
 {% endblock %}
 
