--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,13 @@ body {
     color: #FFFFFF;
 }
 
+.title_head_about {
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 30px;
+    /*font-style: oblique;*/
+    color: #FFFFFF;
+}
+
 .error {
     color: red;
 }
