--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,7 +11,7 @@
   <a class="navbar-brand" href="#">
   	<img src="/static/images/LogoMakr_1eVpm6.png" width="200" height="200" class="d-inline-block align-top" alt=""></a>
    <ul class="nav navbar-nav navbar-right">
-   	<li><a href="#"><input type="submit" onclick="typeWriter()" value="About"></a></li>
+   	<li><a href="/about"><input type="submit" value="About"></a></li>
       <li><a href="#"><input type="submit" onclick="document.getElementById('id01').style.display='block'" style="width:auto;" value="Register Here"></a></li>
     </ul>
  </nav>
@@ -71,10 +71,11 @@
   </form>
 </div>
 
+<!-- Footer -->
 <div class="footer">
     <hr>
         <p><a href="https://github.com/julietteandrea/Trifecta-callRecorder">
-          <strong><u>Trifecta</u>: Let Trifecta help you receive quality assurance perfecta. </a></strong> |
+          <i class="fab fa-github"></i><strong><u> Trifecta</u>: Let Trifecta help you receive quality assurance perfecta. </a></strong> |
           <strong>© <a href="https://www.linkedin.com/in/juliettegil-/">Juliette Gil</a></strong> August 2018</p>
 </div>
 
@@ -82,4 +83,3 @@
 <script src="/static/js/homepage.js"></script>
 
 {% endblock %}
-
