--- a/templates/about.html
+++ b/templates/about.html
@@ -14,13 +14,25 @@
    	<li><a href="/"><input type="submit" value="Login or Register"></a></li>
    </ul>
 
-<div id="about" style="margin: 0 auto; text-align: center;">
-<img src="/static/images/LogoMakr_1eVpm6.png" width="220" height="220"><h1 class="title_head_about">About</h1>
+<div id="about" style="margin: auto; text-align: center;">
+<img src="/static/images/LogoMakr_1eVpm6.png" width="200" height="200"><h1 class="title_head_about">About</h1>
 <p id="about_text">Trifecta's mission is to provide you with an easy-to-use app to record phone calls. Imagine having a dispute with a customer support hotline, and resolving it by quickly playing back the recordings from a previous call. This app can record any phone call and save the recording for future playback. The frontend lets you place outbound calls, as well as a backend that can accept incoming calls. All of the recordings are easily viewable and playable on the frontend, where the user can look up specific calls, add a short comment or even delete a recording.</p>
 <h1 class="title_head_about">Getting Started</h1>
 <p id="about_text">Your registration will take about three minutes. The first thing you need to do after signing up with Trifecta is to verify your phone number.<br> Don't have time to verify? No problem, when you log in for the first time, you will be redirected to our verification page. After adding your mobile phone number, you will receive a SMS or call from Trifecta with a 4-digit verification code, insert those digits and click verify. Just like that you're verified and ready to go!</p>
 <h1 class="title_head_about">How does Trifecta work?</h1>
 <p id="about_text"><b><i class="fas fa-phone-volume" style="color: #FF0063"></i> Outbound calls:</b> Located on the navigation bar, click on "Make a call". Input the phone number of the party you would like to record. Trifect will call you right away and then transfer you to your desired number. Trifecta silently listens in on your conference call, recording anything said by both parties, until you disconnect the call.<br><b><i class="fas fa-phone-volume" style="color: #FF0063"></i> Inbound calls:</b>To record an incoming call or a call already in-progress, ask the other party to hold. Using the same mobile phone number you verified, use three-way calling, dial Trifecta's number(shown under your account details). Trifecta will immediately start recording. Merge the call in and hang up when finished.</p>
+<h1 class="title_head_about" style="color: #E7D235;">Techstack</h1><p>
+    <a href="https://www.python.org/" target="_blank"><img src="/static/images/icon-python.png" id="imgsize"></a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"><img src="/static/images/javascript-vector-png-javascript-vector-logo-600.png" id="imgsize"></a>
+    <a href="http://www.postgres.org/" target="_blank"><img src="/static/images/postgreSQL-icon@2x.png" id="imgsize"></a>
+	<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/Twilio_logo_red.png" id="imgsize"></a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank"><img src="/static/images/html-5-icon.png" id="imgsize"></a>
+    <a href="http://jinja.pocoo.org/docs/2.10/" target="_blank"><img src="/static/images/jinja2.png" id="imgsize"></a>
+    <a href="http://flask.pocoo.org/" target="_blank"><img src="/static/images/flask.jpg" id="imgsize"></a>
+    <a href="http://flask-sqlalchemy.pocoo.org/2.3/" target="_blank"><img src="/static/images/flsksqlalchemy.png" id="imgsize"></a>
+    <a href="http://jquery.com/" target="_blank"><img src="/static/images/jquery.png" id="imgsize"></a>
+    <a href="https://getbootstrap.com/docs/3.3/" target="_blank"><img src="/static/images/bootstrap.png" id="imgsize"></a><br>
+<div style="color: #E7D235; font-size: 20px;">Trifecta was created by <a href="https://www.linkedin.com/in/juliettegil-/" target="_blank">Juliette Gil</a> for her <a href="https://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a> final project.</a></div>
 </div>
 
 <!-- Javascript for this page -->
