--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -74,9 +74,9 @@
 <!-- Footer -->
 <div class="footer">
     <hr>
-        <p><a href="https://github.com/julietteandrea/Trifecta-callRecorder">
+        <p><a href="https://github.com/julietteandrea/Trifecta-callRecorder" target="_blank">
           <i class="fab fa-github"></i><strong><u> Trifecta</u>: Let Trifecta help you receive quality assurance perfecta. </a></strong> |
-          <strong>© <a href="https://www.linkedin.com/in/juliettegil-/">Juliette Gil</a></strong> August 2018</p>
+          <strong>© <a href="https://www.linkedin.com/in/juliettegil-/" target="_blank">Juliette Gil</a></strong> August 2018</p>
 </div>
 
 <!-- Javascript for this page -->
