--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,7 +49,7 @@
 <p><b> USERNAME:</b> {{ user_username }}</p>
 <p><b>PRIMARY PHONE NUMBER:</b> {{ user_phone }}</p>
 <p><b>EMAIL ADDRESS:</b> {{ user_email }}</p><br>
-<p id="title_head" style="font-size: 20px;color: #B4A747;"">Trifecta's phone number: (669) 271-7646<br>
+<p id="title_head" style="font-size: 20px;color: #E7D235;"">Trifecta's phone number: (669) 271-7646<br>
     We recommend saving this number in your contacts for faster serach</p>
 </div>
 
