--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ body {
     color: #FFFFFF;   
     border-style: solid;
     border-width: 2px; 
-    border-color: #B4A747;
+    border-color: #E7D235;
     /*box-sizing: center;*/
     width: 50%;
     height: 100%;
@@ -69,7 +69,7 @@ input:focus {
   border: 1px solid rgba(239, 48, 84, 84);
 }
 
-input [type=submit]:hover {
+input[type=submit]:hover {
   cursor: pointer;
 }
 
