asc to desc table in profile

--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% block head %}
-
-{% endblock %}
+{% block head %}{% endblock %}
 
 {% block content %}
 <div class="bg">
@@ -39,6 +37,5 @@
     <input type="submit" value="call">
   </form>
 </div>
-
 </div>
 {% endblock %}
