--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,6 @@
 {% endblock %}
 
 {% block content %}
-
 <div class="bg">
 
 <!--navbar -->
@@ -109,7 +108,6 @@
 
 <!-- Javascript for this page -->
 <script type="text/javascript">
-/*let deleteBtn = doucment.querySelector('#delete-btn');*/
 function msg(evt) {
     alert("Call Deleted");
     evt,preventDefault();
@@ -122,10 +120,8 @@ $(document).ready(
         //Create a DataTable
         var data_table = $('#calllog_table').DataTable(
             {
-                "order": [[ 0, "asc" ]]
+                "order": [[ 0, "desc" ]]
             });
-        //var column = data_table.columns(0);
-        //column.visible(false);
     } 
 );
 </script>
