--- a/templates/about.html
+++ b/templates/about.html
@@ -26,9 +26,11 @@
     <a href="http://www.postgres.org/" target="_blank"><img src="/static/images/postgreSQL-icon@2x.png" id="imgsize"></a>
 	<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/Twilio_logo_red.png" id="imgsize"></a>
     <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank"><img src="/static/images/html-5-icon.png" id="imgsize"></a>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank"><img src="/static/images/css-logo.png" id="imgsize"></a>
     <a href="http://jinja.pocoo.org/docs/2.10/" target="_blank"><img src="/static/images/jinja2.png" id="imgsize"></a>
     <a href="http://flask.pocoo.org/" target="_blank"><img src="/static/images/flask.jpg" id="imgsize"></a>
     <a href="http://flask-sqlalchemy.pocoo.org/2.3/" target="_blank"><img src="/static/images/flsksqlalchemy.png" id="imgsize"></a>
+  <a href="https://authy.com/" target="_blank"><img src="/static/images/authy.png" id="imgsize"></a>
     <a href="http://jquery.com/" target="_blank"><img src="/static/images/jquery.png" id="imgsize"></a>
     <a href="https://getbootstrap.com/docs/3.3/" target="_blank"><img src="/static/images/bootstrap.png" id="imgsize"></a><br>
 <div style="color: #E7D235; font-size: 20px;">Trifecta was created by <a href="https://www.linkedin.com/in/juliettegil-/" target="_blank">Juliette Gil</a> for her <a href="https://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a> final project.</a></div>
