--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,7 @@
   <a href="https://authy.com/" target="_blank"><img src="/static/images/authy.png" id="imgsize"></a>
     <a href="http://jquery.com/" target="_blank"><img src="/static/images/jquery.png" id="imgsize"></a>
     <a href="https://getbootstrap.com/docs/3.3/" target="_blank"><img src="/static/images/bootstrap.png" id="imgsize"></a><br>
-<div style="color: #E7D235; font-size: 20px;">Trifecta was created by <a href="https://www.linkedin.com/in/juliettegil-/" target="_blank">Juliette Gil</a> for her <a href="https://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a> final project.</a></div>
+<div style="color: #E7D235; font-size: 20px;">Trifecta was built by <a href="https://www.linkedin.com/in/juliettegil-/" target="_blank">Juliette Gil</a> for her <a href="https://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a> final project.</a><br><br></div>
 </div>
 
 <!-- Javascript for this page -->
